finishing the html part of the project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Currancy Converter</title>
 </head>
 <body>
-    
+   <div class="container">
+    <h1 class="heading">Currancy Converter</h1>
+    <div class="currancyCOntainer">
+        <select  id="currancyFirst" class="currancyFirst">
+            <option value="AUD">AUD</option>
+            <option value="CAD">CAD</option>
+            <option value="EUR "selected>EUR</option>
+            <option value="GBP">GBP</option>
+            <option value="INR">INR</option>
+            <option value="JPY">JPY</option>
+            <option value="USD">USD</option>
+            <option value="TND">TND</option>
+
+        </select>
+        <input type="number"  id="WorthFirst" value="1" min="0">
+    </div>
+    <div class="currancyCOntainer">
+        <select  id="currancySec" class="currancySec">
+            <option value="AUD">AUD</option>
+            <option value="CAD">CAD</option>
+            <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
+            <option value="INR">INR</option>
+            <option value="JPY">JPY</option>
+            <option value="USD">USD</option>
+            <option value="TND" selected>TND</option>
+
+        </select>
+        <input type="number"  id="WorthSec"  disabled>
+    </div>
+    <p class="exchaRa" id="exchanRA">
+        1USD = 3 TND
+    </p>
+   </div> 
 </body>
 </html>
